<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"   
    android:orientation="horizontal"
    android:baselineAligned="false"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
	<TableLayout android:layout_width="0dp"
	    android:layout_weight="1"
	    android:layout_height="wrap_content">	 
	    <TableRow android:layout_width="match_parent"
	        android:layout_height="wrap_content">
	        <TextView android:layout_width="match_parent"
	        	android:layout_height="match_parent"
	        	android:textSize="@dimen/text_medium_size"
	        	android:textColor="@color/secondary_highlight_text"			       
	        	android:text="@string/label_subtotal"/>
	        <TextView
	            android:id="@+id/textView_transaction_subtotal"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="@dimen/transaction_edit_resume_values_marginleft"
	            android:textSize="@dimen/text_medium_size"
	            android:gravity="right"
	            android:ellipsize="end"
	            android:singleLine="true"
	            android:text="@string/test_money_value"/>
	    </TableRow>
	    <TableRow android:layout_width="match_parent"
	        android:layout_height="wrap_content">
	        <TextView android:layout_width="match_parent"	            
	        	android:layout_height="match_parent"	
	        	android:textSize="@dimen/text_medium_size"
	        	android:textColor="@color/secondary_highlight_text"		       
	        	android:text="@string/label_discount"/>
	        <TextView
	            android:id="@+id/textView_transaction_discount"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="@dimen/transaction_edit_resume_values_marginleft"
	            android:textSize="@dimen/text_medium_size"
	            android:gravity="right"
	            android:ellipsize="end"
	            android:singleLine="true"
	            android:text="@string/test_money_value"/>
	    </TableRow>
	    <TableRow android:layout_width="match_parent"			        
	        android:layout_height="wrap_content">
	        <TextView android:layout_width="match_parent"
	        	android:layout_height="match_parent"	
	        	android:textColor="@color/secondary_highlight_text"
	        	android:textSize="@dimen/text_medium_size"	        	
	        	android:text="@string/label_taxes"/>
	        <TextView
	            android:id="@+id/textView_transaction_tax"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="@dimen/transaction_edit_resume_values_marginleft"
	            android:textSize="@dimen/text_medium_size"
	            android:gravity="right"
	            android:ellipsize="end"
	            android:singleLine="true"
	            android:text="@string/test_money_value"/>
	    </TableRow>
	</TableLayout>
	<LinearLayout android:orientation="vertical"		   
	    android:layout_width="wrap_content"
	    android:padding="5dp"
	    android:layout_height="wrap_content">
	    <TextView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/test_money_value"	        
	        android:textStyle="bold"	
	        android:textSize="@dimen/text_large_size"	       
	        android:layout_gravity="center_horizontal"
	        android:layout_marginTop="3dp"
	        android:id="@+id/textView_transaction_total"
	        />
	    <TextView android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/label_total"
	        android:textSize="@dimen/text_medium_size"
	        android:layout_gravity="center_horizontal"
	        />
	</LinearLayout>
</LinearLayout>
