<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"  
    android:descendantFocusability="blocksDescendants"  
    >
    
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/textView_transactiondetail_product_description"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"            
            android:textSize="@dimen/text_medium_size"
            android:singleLine="true"
            android:ellipsize="end"                        
            android:text="@string/test_product_name"             
            />
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="3dp"
            android:orientation="horizontal"
            >
            <TextView 
                android:id="@+id/textView_transactiondetail_quantity"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:singleLine="true"
            	android:ellipsize="end"
            	android:textSize="@dimen/text_medium_size"
                android:text="@string/test_number_value"
                android:textColor="@color/secondary_highlight_text"
                android:layout_weight="2"
                />
            <TextView           
                android:paddingRight="5dp"      
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="@dimen/text_medium_size"
                android:textColor="@color/secondary_highlight_text"
                android:text="@string/symbol_quantity"          
                />
            <TextView 
                android:id="@+id/textView_transactiondetail_price"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:singleLine="true"
            	android:ellipsize="end"
                android:layout_weight="3"
                android:textSize="@dimen/text_medium_size"
                android:textColor="@color/secondary_highlight_text"               
                android:text="@string/test_money_value"
                />
            <TextView          
                android:id="@+id/textView_discount_symbol" 
                android:paddingRight="5dp"      
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"   
                android:textSize="@dimen/text_medium_size"
                android:textColor="@color/secondary_highlight_text"   
                android:text="@string/symbol_discount"                
                />
            <TextView 
                android:id="@+id/textView_transactiondetail_discount"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:textSize="@dimen/text_medium_size"
                android:singleLine="true"
            	android:ellipsize="end"
            	android:textColor="@color/secondary_highlight_text"
                android:text="@string/test_money_value"
                />
        </LinearLayout>
    </LinearLayout>
        
    <TextView 
        android:id="@+id/textView_transactiondetail_total"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"        
        android:text="@string/test_money_value"
        android:textColor="@color/highlight_text"
        android:paddingTop="10dp"
        android:paddingLeft="5dp"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

</LinearLayout>

