
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/transaction_detail"
    style="?android:attr/textAppearanceLarge"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"    
    android:paddingTop="12dp"
    android:paddingBottom="12dp"
    tools:context=".TransactionDetailFragment" >

    <TextView
        android:id="@+id/textView_transaction_client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_client_name"
        android:textSize="20sp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/base_simple_border_box"
            android:padding="1dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_inner_box"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="2dp" 
                android:paddingBottom="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"                    
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/textView_transaction_typeName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/test_transaction_type"
                        android:textSize="@dimen/text_medium_size"
                        />

                    <TextView
                        android:id="@+id/textView_transaction_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:textSize="@dimen/text_medium_size"
                        android:text="@string/test_transaction_type"
                         />
                    <TextView 
                        android:id="@+id/textView_transaction_date"
                        android:layout_width="0dp"                        
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"                   
                        android:textSize="@dimen/text_medium_size"     
                        android:text="@string/test_transaction_type"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="@string/label_total"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView_transaction_total"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/test_money_value"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="@string/label_subtotal"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView_transaction_subtotal"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/test_money_value" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="@string/label_discount"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView_transaction_discount"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/test_money_value" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="@string/label_taxes"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView_transaction_tax"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/test_money_value" />
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"            
            android:layout_marginTop="10dp">
       
        <TextView
            android:id="@+id/textView_transaction_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"        
            android:textStyle="italic"  
            android:text="@string/test_number_value"       
            />
        <TextView            
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="16sp"        
            android:textStyle="italic" 
            android:text="@string/label_transaction_total_quantity"
            />
        <TextView
            android:id="@+id/textView_transaction_lines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="16sp"        
            android:textStyle="italic" 
            android:text="@string/test_number_value"       
            />
        <TextView            
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="16sp"        
            android:textStyle="italic"   
            android:text="@string/label_transaction_total_lines"
            />
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/listView_products"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:layout_weight="1" >
    </ListView>

    <include layout="@layout/base_confirmation_dialog"
        android:visibility="gone"/>
</LinearLayout>